[package]
name = "smoldb"
description = "Small type-safe nosql-ish object store built on SQLite"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
repository = "https://github.com/ryankurte/rust-smoldb"
license = "MPL-2.0"

[dependencies]
bincode = "1.2.1"
log = "0.4.8"
rusqlite = "0.22.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.106"
features = [ "derive" ]

[dependencies.smoldb_derive]
version = "0.1.0"

[dependencies.smoldb_traits]
version = "0.1.0"


[dev-dependencies]
tempfile = "3.1.0"

