[package]
name = "smoldb_derive"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.3"
Inflector = "0.11.4"
serde = "1.0.106"

[dependencies.syn]
version = "1.0.17"
features = [ "extra-traits", "clone-impls" ]

[dependencies.smoldb_traits]
path = "../smoldb_traits"


[lib]
proc-macro = true

